--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,33 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #333;
+  font-family: 'Bellefair', 'Open Sans', 'Roboto', serif;
+  font-size: 1.2rem;
+  background-color: #eee;
+}
+
+.rl-card {
+  margin: 10px 0px;
+}
+
+@media screen and (max-width: 560px) {
+  .rl-title {
+    /* display: none; */
+    margin: 10px auto !important;
+  }
+
+  .rl-filter {
+    margin: 0 auto;
+  }
+
+  .rl-playlist {
+    margin: 20px 0px;
+  }
+}
+
+@media screen and (min-width: 561) {
+  .rl-card {
+    display: none;
+    /* width: 18rem !important; */
+  }
 }
